# wumbo

./: .env.example  .eslintrc.js  .gitignore  MONOREPO_SETUP.md  README.md  claude.md  docker-compose.yml  package-lock.json  package.json  plan.md  turbo.json
.github/: README.md
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.beat  Dockerfile.worker  MIGRATIONS.md  README.md  main.py  pyproject.toml  requirements.txt  test_task.py  test_task_simple.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 20251223_1420_68b324aa3d62_initial_schema.py  20251223_1647_cd6d8adfce4a_add_plaid_models_bank_accounts_.py
backend/app/: __init__.py
backend/app/api/: router.py
backend/app/api/endpoints/: auth.py  plaid.py  users.py
backend/app/core/: celery_app.py  config.py  encryption.py  logging.py  security.py  webhook_verification.py
backend/app/db/: base.py  session.py
backend/app/integrations/: plaid_client.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  bank_account.py  category.py  household.py  transaction.py  user.py
backend/app/schemas/: __init__.py  bank_account.py  household.py  plaid.py  token.py  transaction.py  user.py
backend/app/services/: plaid_service.py  user_service.py
backend/app/tasks/: __init__.py  email_tasks.py  notification_tasks.py  plaid_tasks.py
backend/scripts/: encrypt_existing_tokens.py  generate_encryption_key.py  run_migrations.py  start-beat.sh  start-flower.sh  start-worker.sh  test_webhook_verification.py
backend/tests/: test_celery_tasks.py
docs/: CELERY.md  (+12 more)
(+27 files in other folders)
